--- a/_posts/2018-03-12-Welcome.markdown
+++ b/_posts/2018-03-12-Welcome.markdown
@@ -1,11 +1,18 @@
 ---
 layout: post
-title:  "Processing Basics"
+title:  "Welcome"
 date:   2018-03-12 10:21:40 +0530
 categories: jekyll update
 comments: true
 ---
-Processing is a software where you can create visual art using codes. It is super easy to use as it is based on a graph. The X-Axis of this graph is the horizontal space. The Y-Axis is the vertical space. The starting (0,0) point of the graph is on the top left corner.
+Hey! Welcome to my blog. 
+Being someone who loves travelling and reading about new places, I decided to write about my experiences so far.
+ In my blog, I will be talking about cities that I have visted or would like to visit. If you are someone who loves reading about different places, you have come to the right place. So fasten your seatbelts and lets get this going!
+
+
+
+(If there are any specific places you would like me to write about, please mention them in the comment section below.)
+
 
 {% if page.comments %}
 
